slurm-19463239.out
 'tryton/binutils/2.34' load complete.
 'tryton/compiler/gcc/7.4' load complete.
 'tryton/python3/3.5.6' load complete.

Loading tryton/python3/3.5.6
  Loading requirement: tryton/binutils/2.34 tryton/compiler/gcc/7.4
  File "<stdin>", line 375
    fig.savefig("EFieldForn=' + str(n) + "tar=01.png",format="PNG")
                                            ^
SyntaxError: invalid syntax
